examples/fail/unexpected_token.uplp
-- test: error { "category": "Parse.unexpected_token", "metadata": { "loc": 10, "tok": "let" } }
let x = 1 let y = 2 in y 